--- a/lite/examples/image_classification/android/app/src/main/res/layout/activity_camera.xml
+++ b/lite/examples/image_classification/android/app/src/main/res/layout/activity_camera.xml
@@ -35,7 +35,7 @@
             tools:context="org.tensorflow.lite.examples.classification.CameraActivity" />
 
 
-        <android.support.v7.widget.Toolbar
+        <!--<android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/tfl_logo" />
-        </android.support.v7.widget.Toolbar>
+        </android.support.v7.widget.Toolbar>-->
 
     </RelativeLayout>
 
