--- a/lite/examples/image_classification/android/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/lite/examples/image_classification/android/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -15,48 +15,47 @@
     <LinearLayout
         android:id="@+id/gesture_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingTop="10dp"
         android:paddingBottom="10dp">
 
-        <ImageView
+        <!--<ImageView
             android:id="@+id/bottom_sheet_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/icn_chevron_up" />
+            android:src="@drawable/icn_chevron_up" />-->
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/detected_item"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/detected_item_value"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="right"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
         </LinearLayout>
 
-        <LinearLayout
+       <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
-
             <TextView
                 android:id="@+id/detected_item1"
                 android:layout_width="wrap_content"
@@ -73,7 +72,6 @@
                 android:textSize="12sp" />
 
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -96,7 +94,7 @@
                 android:textSize="12sp" />
 
         </LinearLayout>
-
+-->
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
@@ -104,6 +102,7 @@
             android:background="@android:color/darker_gray" />
     </LinearLayout>
 
+    <!--
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -301,4 +300,5 @@
             android:text="TFLITE"
             android:textColor="@android:color/black" />
     </LinearLayout>
+-->
 </LinearLayout>
