added buttons and dumped keyword

--- a/lite/examples/image_classification/android/app/src/main/res/values/colors.xml
+++ b/lite/examples/image_classification/android/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#98999b</color>
-    <color name="colorPrimaryDark">#404041</color>
-    <color name="colorAccent">#d2d0d1</color>
+    <color name="colorPrimary">#27c0ea</color>
+    <color name="colorPrimaryDark">#09437a</color>
+    <color name="colorAccent">#31bf7f</color>
 
     <color name="semi_transparent">#66000000</color>
 </resources>
