--- a/lite/examples/image_classification/android/app/src/main/res/values/styles.xml
+++ b/lite/examples/image_classification/android/app/src/main/res/values/styles.xml
@@ -13,8 +13,18 @@
         <item name="android:textColorPrimary">@android:color/white</item>
 
     </style>
+
     <style name="CustomToolBar" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowActionBarOverlay">true</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
