--- a/lite/examples/image_classification/android/app/src/main/res/layout/activity_main.xml
+++ b/lite/examples/image_classification/android/app/src/main/res/layout/activity_main.xml
@@ -8,27 +8,49 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:padding= "10dp">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Thank you for staying Green"
+            android:layout_gravity= "center"
+            android:textColor="#FFFFFF"
+            android:textSize="25dp"
+            android:id="@+id/toolbar_title" />
+
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
-
-    <Button
-        android:id="@+id/useButton"
+    <!--include layout="@layout/content_main" /-->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Use Garbage Bin"
-        android:onClick="enterGarbage"
-        android:layout_margin="@dimen/fab_margin" />
+        android:orientation="vertical">
 
+        <ImageView
+            android:layout_width="270dp"
+            android:layout_height="270dp"
+            android:background="@drawable/recycle_bin"
+            android:scaleType="centerInside"
+            android:layout_marginBottom="30dp"
+            />
+        <Button
+            android:id="@+id/enterGarbage"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Use Garbage Bin"
+            android:onClick="enterGarbage"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:background="@drawable/button_background"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="15"/>
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
