--- a/lite/examples/image_classification/android/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/lite/examples/image_classification/android/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:background="@drawable/bottom_sheet_bg"
+    android:background="?colorPrimaryDark"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="8dp"
@@ -32,21 +32,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/detected_item"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/detected_item_value"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="right"
-                android:textColor="@android:color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
                 android:textSize="16sp" />
 
         </LinearLayout>
@@ -99,7 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_marginTop="8dp"
-            android:background="@android:color/darker_gray" />
+            android:background="?colorAccent" />
     </LinearLayout>
 
     <!--
