--- a/lite/examples/image_classification/android/app/src/main/res/values/colors.xml
+++ b/lite/examples/image_classification/android/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#27c0ea</color>
-    <color name="colorPrimaryDark">#09437a</color>
+    <color name="colorPrimary">#2AF37C</color>
+    <color name="colorPrimaryDark">#367f45</color>
     <color name="colorAccent">#31bf7f</color>
 
     <color name="semi_transparent">#66000000</color>
